--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     ></script>
   </head>
   <body>
-    <section id="title">
+    <section class="colored-section" id="title">
       <div class="container-fluid">
         <!-- Nav Bar -->
 
@@ -105,7 +105,7 @@
 
     <!-- Features -->
 
-    <section id="features">
+    <section class="white-section" id="features">
       <div class="container-fluid">
         <div class="row">
           <div class="features-box col-lg-4">
@@ -131,7 +131,7 @@
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
+    <section class="colored-section" id="testimonials">
       <!-- testimonial-carousel -->
 
       <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
@@ -184,7 +184,7 @@
 
     <!-- Press -->
 
-    <section id="press">
+    <section class="colored-section" id="press">
       <img class="press-logo" src="images/bizinsider.png" alt="bz-logo" />
       <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo" />
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
@@ -193,7 +193,7 @@
 
     <!-- Pricing -->
 
-    <section id="pricing">
+    <section class="white-section"  id="pricing">
       <h2 class="section-heading">A Plan for Every's Needs</h2>
       <p>Simple and affordable price plans for you and your family.</p>
 
@@ -269,7 +269,7 @@
 
     <!-- Call to Action -->
 
-    <section id="cta">
+    <section class="colored-section" id="cta">
       <div class="container-fluid">
         <h3 class="big-heading">
           Find the True Fitness plan for Your lifestyle.
@@ -285,7 +285,7 @@
 
     <!-- Footer -->
 
-    <footer id="footer">
+    <footer class="white-section"  id="footer">
       <div class="container-fluid">
         <i class="social-icon fa-brands fa-twitter"></i>
         <i class="social-icon fa-brands fa-facebook"></i>
